@@ -21,6 +21,9 @@
                  [antizer "0.2.2"]
                  [matchbox "0.0.9"]]
 
+  :jvm-opts ["--add-modules" "java.xml.bind"]
+
+
   :plugins [[lein-environ "1.0.2"]
             [lein-cljsbuild "1.1.5"]
             [lein-asset-minifier "0.2.7"
